--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,
+body {
+  height: 100vh;
+}
+
+#root {
+  display: flex;
+  flex-flow: column;
+  height: 100vh;
+}
